--- a/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
@@ -24,6 +24,8 @@
     proto: BloodBolt
     capacity: 25
   - type: BoltBarrage
+  - type: DeleteOnDropAttempt
+    message: bolt-barrage-component-extra-message
   - type: GiftIgnore
   - type: CultItem
     canPickUp: false
