--- a/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
@@ -165,4 +165,5 @@
   - type: CultRuneBase
     invokePhrase: "TOK-LYR RQA-NAP G'OLT-ULOFT!"
     cultistGatheringRange: 1.5
+    invokeChatType: Speak
   - type: CultRuneApocalypse
