--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -82,7 +82,9 @@
   - type: EmitSoundOnDrop
     sound:
       path: /Audio/White/Items/handling/drinkglass_drop.ogg
-
+  - type: Tag
+    tags:
+      - DrinkGlass
 # Transformable container - normal glass
 - type: entity
   name: metamorphic glass
