--- a/Resources/Prototypes/_White/RCD/categories.yml
+++ b/Resources/Prototypes/_White/RCD/categories.yml
@@ -20,12 +20,24 @@
 
 - type: rcdCategory
   id: Pipes
-  spritePath: /Textures/Structures/Piping/Atmospherics/pipe.rsi/pipeFourway.png
+  spritePath:
+    sprite: /Textures/Structures/Piping/Atmospherics/pipe.rsi
+    state: pipeFourway
 
 - type: rcdCategory
   id: GasDevices
-  spritePath: /Textures/Structures/Piping/Atmospherics/vent.rsi/vent_off.png
+  spritePath:
+    sprite: /Textures/Structures/Piping/Atmospherics/vent.rsi
+    state: vent_off
 
 - type: rcdCategory
-  id: Disposal
-  spritePath: /Textures/Structures/Piping/Atmospherics/vent.rsi/vent_off.png
+  id: DisposalPipes
+  spritePath:
+    sprite: /Textures/Structures/Piping/disposal.rsi
+    state: conpipe-t
+
+- type: rcdCategory
+  id: DisposalUnits
+  spritePath:
+    sprite: /Textures/Structures/Piping/disposal.rsi
+    state: disposal
