add rpd to atmos lockers, rcd to engivend

--- a/Resources/Prototypes/Catalog/Fills/Lockers/engineer.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/engineer.yml
@@ -92,6 +92,7 @@
       - id: ClothingEyesGlassesMeson
       - id: ClothingShoesBootsMag
       - id: ClothingHandsGlovesColorYellow
+      - id: RapidPipeDispenser # WD
 
 - type: entity
   id: LockerAtmosphericsFilled
@@ -111,6 +112,7 @@
       - id: ClothingEyesGlassesMeson
       - id: ClothingShoesBootsMag
       - id: ClothingHandsGlovesColorYellow
+      - id: RapidPipeDispenser # WD
 
 - type: entity
   id: LockerEngineerFilledHardsuit
