rcd and rpd to technologies

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -348,6 +348,8 @@
       - KitchenKnife # WD EDIT
       - ButchCleaver # WD EDIT
       - WeaponTempGun # WD EDIT
+      - RapidPipeDispenserRecipe # WD edit
+      - RCDRecipe # WD edit
       - DeviceQuantumSpinInverter
   - type: EmagLatheRecipes
     emagDynamicRecipes:
