--- a/Resources/Prototypes/_White/Recipes/lathe_recipes.yml
+++ b/Resources/Prototypes/_White/Recipes/lathe_recipes.yml
@@ -167,3 +167,19 @@
   completetime: 3
   materials:
      Steel: 800
+
+- type: latheRecipe
+  id: RapidPipeDispenserRecipe
+  result: RapidPipeDispenser
+  completetime: 1
+  materials:
+    Steel: 300
+    Glass: 300
+
+- type: latheRecipe
+  id: RCDRecipe
+  result: RCD
+  completetime: 1
+  materials:
+    Steel: 300
+    Glass: 300
