--- a/Resources/Prototypes/_White/Mood/generic_positveEffects.yml
+++ b/Resources/Prototypes/_White/Mood/generic_positveEffects.yml
@@ -64,3 +64,9 @@
   moodChange: enum.MoodChangeLevel.Medium
   positive: true
   timeout: 2
+
+- type: moodEffect
+  id: WizardFocused
+  description: "Ни что не в силах остановить мое могущество!"
+  moodChange: enum.MoodChangeLevel.Medium
+  positive: true
