--- a/Resources/Prototypes/_White/Wizard/wizard.yml
+++ b/Resources/Prototypes/_White/Wizard/wizard.yml
@@ -71,3 +71,5 @@
   components:
     - type: Wizard
     - type: RandomHumanoidAppearance
+    - type: GlobalAntagonist
+      antagonistPrototype: globalAntagonistWizard
