--- a/Resources/Prototypes/Entities/Structures/Storage/Tanks/Barrel.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Tanks/Barrel.yml
@@ -74,3 +74,34 @@
         - MachineMask
         layer:
         - MachineLayer
+
+- type: entity
+  id: Barrel_Beer_Empty
+  parent: [StorageTank, StructureWheeled]
+  name: бочка пива
+  description: Где пиво, Олег?
+  suffix: Empty
+  components:
+  - type: StaticPrice
+    price: 750
+  - type: Sprite
+    sprite: Structures/Storage/Barrel_Beer.rsi
+    layers:
+    - state: Bochka_Beer
+  - type: Appearance
+  - type: ExaminableSolution
+    solution: tank
+  - type: ReagentTank
+    tankType: Fuel
+
+- type: entity
+  id: Barrel_Beer_Full
+  parent: Barrel_Beer_Empty
+  suffix: Full
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      tank:
+        reagents:
+        - ReagentId: Beer
+          Quantity: 1500
