fix rcd and rpd crafting with full capacity

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -524,6 +524,14 @@
     - MailingUnit
     - ToiletEmpty
 
+- type: entity # WD
+  id: RapidPipeDispenserEmpty
+  parent: RapidPipeDispenser
+  suffix: Empty
+  components:
+  - type: LimitedCharges
+    charges: 0
+
 - type: entity
   id: RCDRecharging
   parent: RCD
