--- a/Resources/Prototypes/_White/Entities/Structures/Storage/Barrel.yml
+++ b/Resources/Prototypes/_White/Entities/Structures/Storage/Barrel.yml
@@ -32,14 +32,12 @@
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
   - type: Climbable
-
-  # orebox-specific
   - type: Sprite
     noRot: true
-    sprite: /Textures/Structures/Storage/Barrel.rsi
+    sprite: /Textures/White/Objects/Storage/Barrel.rsi
     layers:
-    - state: Bochka
-    - state: Bochka-top
+    - state: Barrel
+    - state: Barrel-top
       map: [ top ]
       visible: true
   - type: Appearance
@@ -74,34 +72,3 @@
         - MachineMask
         layer:
         - MachineLayer
-
-- type: entity
-  id: Barrel_Beer_Empty
-  parent: [StorageTank, StructureWheeled]
-  name: бочка пива
-  description: Изготовлено древними дворфами
-  suffix: Empty
-  components:
-  - type: StaticPrice
-    price: 750
-  - type: Sprite
-    sprite: Structures/Storage/Barrel_Beer.rsi
-    layers:
-    - state: Bochka_Beer
-  - type: Appearance
-  - type: ExaminableSolution
-    solution: tank
-  - type: ReagentTank
-    tankType: Fuel
-
-- type: entity
-  id: Barrel_Beer_Full
-  parent: Barrel_Beer_Empty
-  suffix: Full
-  components:
-  - type: SolutionContainerManager
-    solutions:
-      tank:
-        reagents:
-        - ReagentId: Beer
-          Quantity: 1500
