Revert "Vox sprite rework (#26985)"
This reverts commit 9e2df3002efd6f2a3666fe821acdfde79dc1e027.

--- a/Resources/Prototypes/Body/Parts/vox.yml
+++ b/Resources/Prototypes/Body/Parts/vox.yml
@@ -33,10 +33,10 @@
   components:
     - type: Sprite
       sprite: Mobs/Species/Vox/parts.rsi
-      state: "torso"
+      state: "torso_m"
     - type: Icon
       sprite: Mobs/Species/Vox/parts.rsi
-      state: "torso"
+      state: "torso_m"
     - type: BodyPart
       partType: Torso
     - type: Extractable
@@ -54,10 +54,10 @@
   components:
     - type: Sprite
       sprite: Mobs/Species/Vox/parts.rsi
-      state: "head"
+      state: "head_m"
     - type: Icon
       sprite: Mobs/Species/Vox/parts.rsi
-      state: "head"
+      state: "head_m"
     - type: BodyPart
       partType: Head
       vital: true
