--- a/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -38,7 +38,7 @@
       interfaces:
         enum.GasCanisterUiKey.Key:
           type: GasCanisterBoundUserInterface
-        - key: enum.PolymorphableCanisterUiKey.Key
+        enum.PolymorphableCanisterUiKey.Key:
           type: PolymorphableCanisterBUI
     - type: Destructible
       thresholds:
