--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -237,7 +237,7 @@
       constructForms: [ArtificerConstruct, JuggernautConstruct, WraithConstruct]
     - type: UserInterface
       interfaces:
-        - key: enum.SelectConstructUi.Key
+        enum.SelectConstructUi.Key:
           type: ConstructSelectorBui
     - type: ContainerContainer
       containers:
