--- a/Resources/Prototypes/_White/sechud.yml
+++ b/Resources/Prototypes/_White/sechud.yml
@@ -16,5 +16,5 @@
     - CriminalRecordIconRemove
   - type: UserInterface
     interfaces:
-    - key: enum.SecurityHudUiKey.Key
-      type: SecurityHudBUI
+      enum.SecurityHudUiKey.Key:
+        type: SecurityHudBUI
