--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -246,8 +246,8 @@
     default: ClothingEyesGlassesSunglasses
   - type: UserInterface
     interfaces:
-    - key: enum.ChameleonUiKey.Key
-      type: ChameleonBoundUserInterface
+      enum.ChameleonUiKey.Key:
+        type: ChameleonBoundUserInterface
 
 - type: entity
   parent: [ClothingEyesGlassesThermalSyndie, ShowSecurityIcons]
