--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -207,21 +207,21 @@
       enum.StrippingUiKey.Key:
         type: StrippableBoundUserInterface
       # WD-EDIT
-      - key: enum.ListViewSelectorUiKeyChangeling.Key
+      enum.ListViewSelectorUiKeyChangeling.Key:
         type: ListViewSelectorBui
-      - key: enum.TransformStingSelectorUiKey.Key
+      enum.TransformStingSelectorUiKey.Key:
         type: TransformStingSelectorBui
-      - key: enum.NameSelectorUIKey.Key
+      enum.NameSelectorUIKey.Key:
         type: NameSelectorBUI
-      - key: enum.RuneTeleporterUiKey.Key
+      enum.RuneTeleporterUiKey.Key:
         type: TeleportRunesListWindowBUI
-      - key: enum.SummonCultistUiKey.Key
+      enum.SummonCultistUiKey.Key:
         type: SummonCultistListWindowBUI
-      - key: enum.CultEmpowerUiKey.Key
+      enum.CultEmpowerUiKey.Key:
         type: SpellSelectorBUI
-      - key: enum.CultEmpowerRemoveUiKey.Key
+      enum.CultEmpowerRemoveUiKey.Key:
         type: SpellRemoverBUI
-      - key: enum.BloodRitesUi.Key
+      enum.BloodRitesUi.Key:
         type: CultistFactoryBUI
       # WD-EDIT END
   - type: Puller
