--- a/Resources/Prototypes/_White/Entities/Clothing/Head/night_vision_goggle.yml
+++ b/Resources/Prototypes/_White/Entities/Clothing/Head/night_vision_goggle.yml
@@ -24,8 +24,8 @@
     default: ClothingEyesGlassesSunglasses
   - type: UserInterface
     interfaces:
-    - key: enum.ChameleonUiKey.Key
-      type: ChameleonBoundUserInterface
+      enum.ChameleonUiKey.Key:
+        type: ChameleonBoundUserInterface
 
 # Night Vision Goggles (Chameleon) Nuke Ops
 - type: entity
