--- a/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
@@ -51,8 +51,8 @@
     isRune: true
   - type: UserInterface
     interfaces:
-    - key: enum.CultEmpowerUiKey.Key
-      type: SpellSelectorBUI
+      enum.CultEmpowerUiKey.Key:
+        type: SpellSelectorBUI
   - type: CultRune
   - type: Concealable
     examinableWhileConcealed: true
