--- a/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
@@ -70,5 +70,5 @@
     closeOnHandDeselect: true
   - type: UserInterface
     interfaces:
-    - key: enum.BloodRitesUi.Key
-      type: CultistFactoryBUI
+      enum.BloodRitesUi.Key:
+        type: CultistFactoryBUI
